<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorInterface"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reto2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/reto2"
        app:layout_constraintBottom_toBottomOf="@+id/reto1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reto1"
        app:layout_constraintTop_toTopOf="@+id/reto1" />

    <Button
        android:id="@+id/reto1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/reto1"
        app:layout_constraintEnd_toStartOf="@+id/reto2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reto4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/reto4"
        app:layout_constraintBottom_toBottomOf="@+id/reto3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reto3"
        app:layout_constraintTop_toTopOf="@+id/reto3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reto3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/reto3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reto4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:background="@color/colorTextors"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>